--- a/express-mongo/package.json
+++ b/express-mongo/package.json
@@ -12,9 +12,13 @@
     "typescript": "5"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongodb": "^4.0.7",
+    "bcrypt": "^6.0.0",
     "express": "5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "6.19.0",
     "mongoose": "8.18.1"
   }
