instancia de docker montada y corriendo, proyecto express usando mongo y mongoose

--- a/express-mongo/package.json
+++ b/express-mongo/package.json
@@ -3,20 +3,22 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "tsc && bun run dist/src/index.js"
+    "dev": "bunx tsc && bun run dist/index.js"
   },
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
-    "typescript": "5"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongodb": "^4.0.7",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.2",
     "express": "5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.19.0",
