login and register features

--- a/rest_api/package.json
+++ b/rest_api/package.json
@@ -9,6 +9,7 @@
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^24.4.0"
   },
   "peerDependencies": {
@@ -22,6 +23,7 @@
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.18.1"
   }
 }
